syntax = "proto3";

package proto;

option go_package = "github.com/asliddinberdiev/microservice_graphql/order/proto";

message Order {
  message OrderedProduct {
    string id = 1;
    string name = 2;
    string description = 3;
    uint64 price = 4;
    uint64 quantity = 5;
  }

  string id = 1;
  string account_id = 2;
  uint64 total_price = 3;
  bytes created_at = 4;
  repeated OrderedProduct products = 5;
}

message CreateOrderRequest {
  message OrderedProduct {
    string productId = 1;
    uint64 quantity = 2;
  }
  string accountId = 1;
  repeated OrderedProduct products = 2;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message GetOrdersForAccountRequest {
  string accountId = 1;
}

message GetOrdersForAccountResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc GetOrdersForAccount(GetOrdersForAccountRequest) returns (GetOrdersForAccountResponse);
}